# monide-ide

./: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
MonideBackend/: CMakeCache.txt  CMakeJSConfig.bash  CMakeLists.txt  Makefile  WinConfig.bash  cmake_install.cmake  compile_commands.json  package-lock.json  package.json
MonideBackend/src/: CMakeLists.txt  Main.hpp
MonideBackend/src/Extensions/: Loader.hpp  Macros.hpp
MonideBackend/src/OpenGL/Loader/: Glad.c  Glad.h
MonideBackend/src/OpenGL/Loader/KHR/: khrplatform.h
MonideBackend/src/Process/: ProcessManager.hpp
MonideBackend/src/Windowing/: Window.hpp
src/: titlebar.js  window.js
src/view/: index.html  titlebar.js
src/view/styles/: bottombar.css  sidebar.css  titlebar.css
